--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required ( VERSION 3.25 ) 
 set ( CMAKE_CXX_STANDARD 17 ) 
-set ( CMAKE_CXX_COMPILER "g++-12" )
 
 project ( SurrogateModelling CXX ) 
 
@@ -13,11 +12,11 @@ elseif ( CMAKE_CXX_COMPILER_ID MATCHES "INTEL" )
 endif ()
 
 find_package ( Eigen3 3.4 REQUIRED NO_MODULE ) 
-find_package ( OpenMP ) 
-if ( OPENMP_FOUND ) 
-    SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}" )
-    SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}" )
-endif ()
+# find_package ( OpenMP ) 
+# if ( OPENMP_FOUND ) 
+#     SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}" )
+#     SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}" )
+# endif ()
 
 # Add interface libraries 
 add_subdirectory ( library )
